spacing fix

--- a/src/app/pages/home/current-song/current-song.component.scss
+++ b/src/app/pages/home/current-song/current-song.component.scss
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-top: 6px;
   // margin: 10px;
   // max-width: calc(500px + 110 * ((100vw - 320px) / 680));
   .current-text {
